# worldgen

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE.md  build.sh  format_all.sh  readme.md  run.sh
.github/workflows/: c-cpp.yml
apps/: CMakeLists.txt  main.c
examples/: ex2.rs  example.rs
include/worldgen/: cleanup.h  include_paths.h  render.h
notes/: scratch.md
src/: CMakeLists.txt  cleanup.c  main.c  main.rs  render.c
src/render/: render.c
